--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,6 @@
     font-size: 2rem; 
     color: white;
 }
+
+body { margin: 0; padding: 0; }
+#map { position: absolute; top: 0; bottom: 0; width: 100%; }
