--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,4 +5,16 @@
 }
 
 body { margin: 0; padding: 0; }
-#map { position: absolute; top: 1; bottom: 0; width: 100%; }
+
+#map {
+    position: absolute;
+    top:0;
+    bottom:0;
+    width:80%;
+    min-height: 300px;
+    margin-top:15%;
+    background-color:black;
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+  }
